@startuml dp2-strategy
!include _style.puml
title DP#2 Strategy - 환불 정책 알고리즘 교체
left to right direction
interface RefundPolicy <<Strategy>> {
  +calculateRefundAmount(): BigDecimal
  +getRefundType(): String
}
class FullRefundPolicy {
  +calculateRefundAmount(): BigDecimal
  +getRefundType(): String
}
class PartialRefundPolicy {
  -HALF: BigDecimal
  --
  +calculateRefundAmount(): BigDecimal
  +getRefundType(): String
}
class NoRefundPolicy {
  +calculateRefundAmount(): BigDecimal
  +getRefundType(): String
}
class RefundHandler <<Context>> {
  -pending: Map<String,RefundRequest>
  -completed: Map<String,Refund>
  -requestToPnr: Map<String,String>
  -gateway: PaymentGatewayInterface
  -strategy: RefundPolicy
  -requestSeq: int
  -refundSeq: int
  -REFUND_YYMM: DateTimeFormatter
  --
  +setStrategy(): void
  +getStrategy(): RefundPolicy
  +evaluateRefund(): RefundRequest
  +processRefund(): void
  +denyRefund(): void
  +getRefundDetail(): RefundRequest
  +getPendingRequests(): List<RefundRequest>
  +previewRefund(): BigDecimal
  +previewPolicyName(): String
  -resolvePolicy(): RefundPolicy
  -resolveFareRuleFrom(): FareRule
  -synthesize(): FareRule
}
class FareRule {
  -fareRuleId: Long
  -fareClass: String
  -refundable: boolean
  -changeFee: BigDecimal
  -cancellationPenalty: BigDecimal
  --
  +getFareClass(): String
  +isRefundable(): boolean
  +getChangeFee(): BigDecimal
  +getCancellationPenalty(): BigDecimal
  +checkRefundPolicy(): RefundPolicy
}
class RefundPolicyResolver <<Selector>> {
  +resolve(): RefundPolicy
}
RefundPolicy <|.. FullRefundPolicy
RefundPolicy <|.. PartialRefundPolicy
RefundPolicy <|.. NoRefundPolicy
RefundHandler o--> RefundPolicy : strategy
RefundHandler ..> RefundPolicyResolver : 정책 선택 위임
RefundPolicyResolver ..> RefundPolicy : FareRule 기반 선택
FareRule ..> RefundPolicy : 등급이 정책 결정
note bottom of RefundHandler : 운임 추가시 핸들러 수정 불필요
@enduml
